web-infras/parser/tests/fixtures/babel/es2017/async-functions/allow-await-outside-function-throw/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,16)
2|  return await 1
 |              ^
